Criei a página principal

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -6,6 +6,8 @@
     <title>meu primeiro site em repositório</title>
 </head>
 <body>
-    
+    <h1>Olá, Mundo!</h1>
+    <hr>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia pariatur illo aperiam doloribus possimus nobis consectetur, fuga ab sit ut deserunt odit obcaecati sint, maxime iure corrupti! Nemo, quis et!</p>
 </body>
 </html>
